Extra comments and restructuring

--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj
@@ -142,6 +142,10 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\FragmentShader.f" />
+    <None Include="Shaders\VertexShader.v" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
