--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
@@ -42,4 +42,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\FragmentShader.f">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\VertexShader.v">
+      <Filter>Shaders</Filter>
+    </None>
+  </ItemGroup>
 </Project>
