Introduced a CustomSceneObject type
Far better object creation and rendering. All handled through this class.
Dictionary of static objects.

--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj
@@ -132,15 +132,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CustomSceneObject.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="StbImageLoader.cpp" />
+    <ClCompile Include="TextureLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CustomSceneObject.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="TextureLoader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\FragmentShader.f" />
