New Physics Object
Allows for object projection and simple physics

--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="CustomSceneObject.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="PhysicsObject.cpp" />
     <ClCompile Include="StbImageLoader.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
   </ItemGroup>
@@ -142,6 +143,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CustomSceneObject.h" />
     <ClInclude Include="Main.h" />
+    <ClInclude Include="PhysicsObject.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="TextureLoader.h" />
