--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
@@ -67,5 +67,11 @@
     <None Include="Shaders\VertexShader.v">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\TerrainFragmentShader.f">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\TerrainVertexShader.v">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
