--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
@@ -76,5 +76,17 @@
     <None Include="Shaders\TerrainVertexShader.v">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\LightsourceFragmentShader.f">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\LightsourceVertexShader.v">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\LitVertexShader.v">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\LitFragmentShader.f">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
