Started work on proc gen on sphere

--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj
@@ -155,6 +155,8 @@
     <None Include="Shaders\LightsourceVertexShader.v" />
     <None Include="Shaders\LitFragmentShader.f" />
     <None Include="Shaders\LitVertexShader.v" />
+    <None Include="Shaders\SphereFragmentShader.f" />
+    <None Include="Shaders\SphereVertexShader.v" />
     <None Include="Shaders\TerrainFragmentShader.f" />
     <None Include="Shaders\TerrainVertexShader.v" />
     <None Include="Shaders\VertexShader.v" />
