--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
@@ -88,5 +88,11 @@
     <None Include="Shaders\LitFragmentShader.f">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\SphereVertexShader.v">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\SphereFragmentShader.f">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
