--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
@@ -106,5 +106,11 @@
     <None Include="Shaders\SphereFragmentShader.f">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\ModelFragmentShader.f">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\ModelVertexShader.v">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
