--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj.filters
@@ -91,18 +91,6 @@
     <None Include="Shaders\TerrainVertexShader.v">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="Shaders\LightsourceFragmentShader.f">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="Shaders\LightsourceVertexShader.v">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="Shaders\LitVertexShader.v">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="Shaders\LitFragmentShader.f">
-      <Filter>Shaders</Filter>
-    </None>
     <None Include="Shaders\SphereVertexShader.v">
       <Filter>Shaders</Filter>
     </None>
@@ -113,6 +101,12 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Shaders\ModelVertexShader.v">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\NewFragmentShader.f">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\NewVertexShader.v">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
