Better way to assign vertex attributes
Now passes in a collection of attributes with sizes and types. The object create method uses the type to determine the offset

--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="TextureLoader.h" />
+    <ClInclude Include="VertAttributeHolder.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\FragmentShader.f" />
