Revert "Point light held as a struct"
This reverts commit b80703af416052213ba854de52591ee3d83b74dd.

--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj
@@ -156,10 +156,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\FragmentShader.f" />
+    <None Include="Shaders\LightsourceFragmentShader.f" />
+    <None Include="Shaders\LightsourceVertexShader.v" />
+    <None Include="Shaders\LitFragmentShader.f" />
+    <None Include="Shaders\LitVertexShader.v" />
     <None Include="Shaders\ModelFragmentShader.f" />
     <None Include="Shaders\ModelVertexShader.v" />
-    <None Include="Shaders\NewFragmentShader.f" />
-    <None Include="Shaders\NewVertexShader.v" />
     <None Include="Shaders\SphereFragmentShader.f" />
     <None Include="Shaders\SphereVertexShader.v" />
     <None Include="Shaders\TerrainFragmentShader.f" />
