--- a/3016-OpenGlScene/3016-OpenGlScene.vcxproj
+++ b/3016-OpenGlScene/3016-OpenGlScene.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="ArcingProjectileObject.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="PointLight.cpp" />
     <ClCompile Include="StbImageLoader.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
   </ItemGroup>
@@ -149,6 +150,7 @@
     <ClInclude Include="ArcingProjectileObject.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="PointLight.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="TextureLoader.h" />
