--- a/.gitignore
+++ b/.gitignore
@@ -431,3 +431,11 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+
+# Exclusions for dependency files
+!External Dependencies/
+!External Dependencies/**
+
+/*.dll
+!*/**/*.dll
